       See 'Simple Match Lookup' in Documentation/topics/dpdk/bridge.rst.
     * New per-interface configuration knob 'other_config:tx-steering'.  If set
       to 'hash', enables hash-based Tx packet steering mode to utilize all the
       Tx queues of the interface regardles of the number of PMD threads.
     * Removed experimental tag for PMD Auto Load Balance.
   - DPDK:
     * EAL argument --socket-mem is no longer configured by default upon
       start-up.  If dpdk-socket-mem and dpdk-alloc-mem are not specified,
       DPDK defaults will be used.
     * EAL argument --socket-limit no longer takes on the value of --socket-mem
       by default.  'other_config:dpdk-socket-limit' can be set equal to
       the 'other_config:dpdk-socket-mem' to preserve the legacy memory
       limiting behavior.
     * EAL argument --in-memory is applied by default if supported.
     * Add hardware offload support for matching IPv4/IPv6 frag types
       (experimental).
     * Add hardware offload support for GRE flows (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
     * Add support for DPDK 21.11.
     * Forbid use of DPDK multiprocess feature.
     * Add support for running threads on cores >= RTE_MAX_LCORE.
   - Python:
     * For SSL support, the use of the pyOpenSSL library has been replaced
       with the native 'ssl' module.
   - OVSDB:
     * Python library for OVSDB clients now also supports faster
       resynchronization with a clustered database after a brief disconnection,
       i.e. 'monitor_cond_since' monitoring method.
   - ovs-dpctl and 'ovs-appctl dpctl/':
     * New commands 'cache-get-size' and 'cache-set-size' that allows to
       get or configure linux kernel datapath cache sizes.
   - ovs-ofctl dump-flows no longer prints "igmp".  Instead the flag
     "ip,nw_proto=2" is used.
   - ovs-appctl:
     * New command tnl/neigh/aging to read/write the neigh aging time.
   - OpenFlow: